--- a/Check.SPort/MainWindow.xaml
+++ b/Check.SPort/MainWindow.xaml
@@ -47,6 +47,12 @@
             <Setter Property="BorderThickness" Value="1,1,1,2" />
             <Setter Property="md:ComboBoxAssist.ShowSelectedItem" Value="True" />
             <Style.Triggers>
+                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="CLOSE">
+                    <Setter Property="IsEnabled" Value="False"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Content, ElementName=btnOpenClose}" Value="OPEN">
+                    <Setter Property="IsEnabled" Value="True"/>
+                </DataTrigger>
                 <Trigger Property="IsEnabled" Value="False">
                     <Setter Property="md:TextFieldAssist.HasClearButton" Value="False" />
                 </Trigger>
@@ -63,7 +69,7 @@
         </Style>
         <Style x:Key="SendButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignOutlinedDarkButton}">
             <Setter Property="Margin" Value="10" />
-            <Setter Property="Width" Value="70" /> 
+            <Setter Property="Width" Value="75" /> 
             <Setter Property="Height" Value="55" />
             <Setter Property="BorderBrush" Value="Black" />
             <Setter Property="BorderThickness" Value="1" />
@@ -77,7 +83,7 @@
     
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="C:\Users\franc\sources\RemoteRepositoty\SerialPortTool\Check.SPort\Resources\Image\sfondo_001.jpg"/>
+            <ImageBrush ImageSource="\Resources\Image\sfondo_001.jpg"/>
         </Grid.Background>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -131,9 +137,8 @@
             </UniformGrid>
             
             <Button x:Name="btnOpenClose" Margin="10" Content="OPEN" Grid.Row="0" Grid.Column="2"
-                    Style="{StaticResource MaterialDesignOutlinedDarkButton}" Width="70" Height="55"
-                    BorderBrush="Black" BorderThickness="1" Background="#FF4FE0F7" Click="BtnOpenClose_Click"
-                    IsEnabled="{Binding ElementName=txtCMD.}"/>
+                    Style="{StaticResource MaterialDesignOutlinedDarkButton}" Width="75" Height="55"
+                    BorderBrush="Black" BorderThickness="1" Background="#FF4FE0F7" Click="BtnOpenClose_Click" />
 
             <Border Grid.Row="1" Grid.ColumnSpan="3">
                 <DockPanel HorizontalAlignment="Center">
@@ -149,7 +154,8 @@
 
             <StackPanel Grid.Row="2" Grid.ColumnSpan="3">
                 <TextBox x:Name="txtResponse" Background="#FFF3FAF3" HorizontalContentAlignment="Stretch" Margin="10" Padding="5"
-                         md:HintAssist.Hint="Response commands" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True" />
+                         md:HintAssist.Hint="Response commands" TextWrapping="Wrap" AcceptsReturn="True" IsReadOnly="True"
+                         VerticalScrollBarVisibility="Auto" Height="150"/>
             </StackPanel>
         </Grid>
     </Grid>
