--- a/Check.SPort/MainWindow.xaml
+++ b/Check.SPort/MainWindow.xaml
@@ -18,7 +18,7 @@
         Height="450" Width="900" 
         MinHeight="450" MinWidth="900" 
         MaxHeight="450" MaxWidth="900" 
-        WindowState="Normal" WindowStartupLocation="CenterScreen">
+        WindowState="Normal" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
 
     <Window.Resources>
         <Style x:Key="CbxStyle" TargetType="{x:Type ComboBox}" BasedOn="{StaticResource MaterialDesignFilledComboBox}">
@@ -55,7 +55,7 @@
         </Style>
         <Style x:Key="SendButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource MaterialDesignOutlinedDarkButton}">
             <Setter Property="Margin" Value="10" />
-            <Setter Property="Width" Value="75" /> 
+            <Setter Property="Width" Value="75" />
             <Setter Property="Height" Value="55" />
             <Setter Property="BorderBrush" Value="Black" />
             <Setter Property="BorderThickness" Value="1" />
@@ -69,7 +69,7 @@
             </Style.Triggers>
         </Style>
     </Window.Resources>
-    
+
     <Grid>
         <Grid.Background>
             <ImageBrush ImageSource="\Resources\Image\sfondo_001.jpg"/>
@@ -149,10 +149,31 @@
                     <ComboBoxItem Content="None" Tag="None" />
                 </ComboBox>
             </UniformGrid>
-            
-            <Button x:Name="btnOpenClose" Margin="10" Content="OPEN" Grid.Row="0" Grid.Column="2"
-                    Style="{StaticResource MaterialDesignOutlinedDarkButton}" Width="75" Height="55"
-                    BorderBrush="Black" BorderThickness="1" Background="#FF4FE0F7" Click="BtnOpenClose_Click" />
+
+            <UniformGrid Rows="2" Grid.Row="0" Grid.Column="2" VerticalAlignment="Center">
+                <Button x:Name="btnOpenClose" Margin="10" Content="OPEN"
+                        Style="{StaticResource MaterialDesignOutlinedDarkButton}" Width="75" Height="55"
+                        BorderBrush="Black" BorderThickness="1" Background="#FF4FE0F7" Click="BtnOpenClose_Click" />
+
+                <StackPanel VerticalAlignment="Center">
+                    <RadioButton x:Name="rbtnSerial" GroupName="ETH" Padding="1,2" IsChecked="True" Style="{StaticResource MaterialDesignRadioButton}"
+                                 Background="Black">
+                        <RadioButton.Content>
+                            <Border BorderThickness="1" BorderBrush="Purple" CornerRadius="2" Background="Azure" Padding="5,1">
+                                <TextBlock Text="Seriale" FontWeight="Black" />
+                            </Border>
+                        </RadioButton.Content>
+                    </RadioButton>
+                    <RadioButton x:Name="rbtnETH" GroupName="ETH" Padding="1,2" Style="{StaticResource MaterialDesignRadioButton}"
+                                 Background="Black">
+                        <RadioButton.Content>
+                            <Border BorderThickness="1" BorderBrush="Purple" CornerRadius="2" Background="Azure" Padding="5,1">
+                                <TextBlock Text="ETHERNET" FontWeight="Black" />
+                            </Border>
+                        </RadioButton.Content>
+                    </RadioButton>
+                </StackPanel>
+            </UniformGrid>
 
             <Border Grid.Row="1" Grid.ColumnSpan="3">
                 <DockPanel HorizontalAlignment="Center">
